test-deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: test-kic-media-service
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc-web
  selector:
    app: test-kic-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: test-kic-media
spec:
  selector:
    matchLabels:
      app: test-kic-media
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: test-kic-media
    spec:
      containers:
        - image: gcr.io/keeping-it-casual/kic-media:dev
          name: test-kic-media
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
      volumes:
        - name: google-cloud-key
          secret:
            secretName: gcloud-key
